[package]
name = "prp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mio = "1.0.4"
quiche = "0.24.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
local-ip-address = "0.6"
bincode = "2.0.1"
hex = "0.4.3"
ring = "0.17.14"
bevy = "0.16.1"
iroh = "0.91.2"
